QA_Ipreo/src/objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>ACV__c</fullName>
        <description>This field will pull the field value of ACV from Opportunity.</description>
        <formula>Opportunity__r.ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACpV__c</fullName>
        <description>ACpV</description>
        <label>ACpV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acceptance_Date__c</fullName>
        <label>Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Vertical__c</fullName>
        <formula>TEXT(Account__r.Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Need_to_Be_Updated__c</fullName>
        <formula>Auto_Populated_Active_Status__c !=  Active__c</formula>
        <label>Active Need to Be Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal field used to calculate the status of an account.  Logic associated with calculating account status counts the number of &quot;active&quot; work orders.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocated_Secondary_PM__c</fullName>
        <label>% Allocated (Secondary PM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Analyst_Team_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Analyst Team Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders_Analyst_Team_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Pass_Through__c</fullName>
        <label>Annual Pass Through</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Populated_Active_Status__c</fullName>
        <formula>AND(
     RecordType.DeveloperName = &apos;Analytics&apos;
    ,OR( 
         AND( 
              NOT(ISBLANK(Completion_Date__c))
             ,YEAR(Completion_Date__c) = YEAR(DATEVALUE(NOW()))
            )
        ,AND(
              ISBLANK(Completion_Date__c)
             ,NOT(ISBLANK(Est_Completion_Date__c))
             ,Est_Completion_Date__c &gt; DATEVALUE(Now())
            )
       )
)</formula>
        <label>Auto Populated Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>New Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accreditation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Clean-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Extract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feeds (BD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrations (new)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrations (changes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports (new)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports (changes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_RAG_Comments__c</fullName>
        <label>Client RAG Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_RAG__c</fullName>
        <label>Client RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Success_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Success Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WOs_Client_Success_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Revenue recognition date/UAT sign-off date</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated contract</description>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Allocated__c</fullName>
        <label>Current % Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Est_Project_Completion_Date__c</fullName>
        <label>Current Est. Project Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Name__c</fullName>
        <label>DM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Region__c</fullName>
        <label>Data Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dataset__c</fullName>
        <label>Dataset</label>
        <picklist>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Debt_Issue_Size__c</fullName>
        <label>Debt Issue Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Annual_Transaction_Fees__c</fullName>
        <label>Est. Annual Transaction Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Completion_Date__c</fullName>
        <label>Est. Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_Start_Date__c</fullName>
        <label>Est. Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Allocation__c</fullName>
        <label>Expected Allocation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expense_Cap__c</fullName>
        <label>Expense Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expenses_Description__c</fullName>
        <label>Expenses Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <description>Total expenses</description>
        <label>Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Product_Code__c</fullName>
        <formula>Text(Product__r.Finance_Product_Code__c)</formula>
        <label>Finance Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Period_months__c</fullName>
        <label>Free Period (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>Text( Product__r.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Est_Project_Completion_Date__c</fullName>
        <label>Initial Est. Project Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <formula>IF(NOT(
    ISPICKVAL( Status__c , &quot;Closed - Live&quot; ) ||
    ISPICKVAL( Status__c , &quot;Closed - Not Live&quot; ) ||
    ISPICKVAL( Status__c , &quot;Closed - Provisioned&quot; ) ||
    ISPICKVAL( Status__c , &quot;Closed - Not Provisioned&quot; ) ||
    ISPICKVAL( Status__c , &quot;Closed - Completed&quot; ) ||
    ISPICKVAL( Status__c , &quot;Closed - Cancelled&quot; )
), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Mail_sent_already__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mail sent already</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_30 , 28) +  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_New_Business__c</fullName>
        <label>Net New Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Calls__c</fullName>
        <label>No. of Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Conferences__c</fullName>
        <label>No. of Conferences</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Deals__c</fullName>
        <label>No. of Deals</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Meetings__c</fullName>
        <label>No. of Meetings</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Questions__c</fullName>
        <label>No. of Questions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Reports__c</fullName>
        <label>No. of Reports</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Users__c</fullName>
        <description>Number of Users</description>
        <inlineHelpText>Number of Users</inlineHelpText>
        <label>No. of Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_RAG_Comments__c</fullName>
        <label>Overall RAG Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_RAG__c</fullName>
        <label>Overall RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
                <color>#009900</color>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Manager__c</fullName>
        <formula>Account__r.Primary_Account_Manager__r.FirstName + &apos; &apos; + Account__r.Primary_Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders_Primary_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Sales_Rep__c</fullName>
        <formula>Account__r.Primary_Sales_Rep__r.FirstName + &apos; &apos; + Account__r.Primary_Sales_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Year_ACpV__c</fullName>
        <label>Prior Year ACpV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Pass_Through__c</fullName>
        <label>Prior Year Pass Through</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1- Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2- High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4- Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Duplicate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Comments__c</fullName>
        <label>Product Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Region__c</fullName>
        <label>Product Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAPAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Revenue_Type__c</fullName>
        <label>Product Revenue Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACV/TRANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Transaction_Type__c</fullName>
        <label>Product Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Vertical__c</fullName>
        <label>Product Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS&amp;T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WOs_Professional_Services_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Partner__c</fullName>
        <label>Referral Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Artemis IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackstone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunswick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christensen IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citi DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citigate DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daiwa IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deutsche DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldman Sachs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPM DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nomura IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 Websystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNL Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takara Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requires_Implementation_UAT__c</fullName>
        <label>Requires Implementation (UAT)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders_Sales_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_RAG_Comments__c</fullName>
        <label>Scope RAG Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scope_RAG__c</fullName>
        <label>Scope RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Account_Manager__c</fullName>
        <formula>Account__r.Secondary_Account_Manager__r.FirstName + &apos; &apos; + Account__r.Secondary_Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Sales_Rep__c</fullName>
        <formula>Account__r.Secondary_Sales_Rep__r.FirstName + &apos; &apos; + Account__r.Secondary_Sales_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_License__c</fullName>
        <label>Site License</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Set Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live (Project Still Open)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Provisioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Provisioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subgroup__c</fullName>
        <formula>Text(Product__r.Subgroup__c)</formula>
        <label>Subgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TCpV__c</fullName>
        <label>TCpV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_1Mo_Allocation__c</fullName>
        <label>T+1Mo Allocation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>T_2Mo_Allocation__c</fullName>
        <label>T+2Mo Allocation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Technical_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Lead_Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <label>Term (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timeline_RAG_Comments__c</fullName>
        <label>Timeline RAG Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Timeline_RAG__c</fullName>
        <label>Timeline RAG</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upfront_Expense_Fee__c</fullName>
        <label>Upfront Expense Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Effort_Days__c</fullName>
        <label>Work Effort (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order_Comments__c</fullName>
        <label>Work Order Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order_Number__c</fullName>
        <displayFormat>WO-{00000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Work_Order_Queue__c</fullName>
        <formula>TEXT( Product__r.Work_Order_Queue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Queue</label>
        <type>Text</type>
    </fields>
    <label>Work Order</label>
    <listViews>
        <fullName>AllWorkOrdersOpen</fullName>
        <columns>NAME</columns>
        <columns>Work_Order_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Est_Completion_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>All Work Orders Open</label>
    </listViews>
    <listViews>
        <fullName>All_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Work_Order_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Est_Completion_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>All_Work_Orders_Open_Need_Closure</fullName>
        <columns>NAME</columns>
        <columns>Work_Order_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Est_Completion_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Work Orders - Open - Need Closure</label>
    </listViews>
    <listViews>
        <fullName>CorpAccountWorkOrdersAPAC</fullName>
        <columns>NAME</columns>
        <columns>Work_Order_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Product_Region__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Est_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <filters>
            <field>Account_Vertical__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <label>Corporate Account Work Orders - APAC</label>
        <sharedTo>
            <roleAndSubordinates>Corporate</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>